commit adding auth operations

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 MONGO = mongodb+srv://zakaria:Zakaria2021@cluster0.gpzfyg7.mongodb.net/test?retryWrites=true&w=majority
 
 
+GOOGLE_CLIENT_ID = 10132293015-s3cjgj41ocdjiei2p5g0lhu55lgmsn30.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
+
+NEXTAUTH_SECRET="sjfgsjksdfnv15"
+
+
+NEXTAUTH_URL = "http://localhost:3000"
